--- a/index.html
+++ b/index.html
@@ -1,15 +1,106 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+    <meta charset="utf-8">
+    <title>360&deg; Image</title>
+    <meta name="description" content="360&deg; Image - A-Frame">
+    <script src="dist/aframe-master.js"></script>
+    <script class="jsbin" src="js/jquery.min.js"></script>
+    <script class="jsbin" src="js/jquery-ui.min.js"></script>
+
+    <script type="text/javascript">
+
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#vrImage')
+                            .attr('src', e.target.result);
+                };
+
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+    </script>
+
+    <style>
+        .inputfile {
+            width: 0.1px;
+            height: 0.1px;
+            opacity: 0;
+            overflow: hidden;
+            position: absolute;
+            z-index: -1;
+        }
+
+        .inputfile + label {
+            max-width: 80%;
+            font-size: 1rem;
+            /* 20px */
+            font-weight: 700;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            cursor: pointer;
+            display: inline-block;
+            overflow: hidden;
+            padding: 0.5rem 1rem;
+            /* 10px 20px */
+        }
+
+        .no-js .inputfile + label {
+            display: none;
+        }
+
+        .inputfile:focus + label,
+        .inputfile.has-focus + label {
+            outline: 1px dotted #000;
+            outline: -webkit-focus-ring-color auto 5px;
+        }
+
+        .inputfile + label * {
+            /* pointer-events: none; */
+            /* in case of FastClick lib use */
+        }
+
+        .inputfile + label svg {
+            width: 1em;
+            height: 1em;
+            vertical-align: middle;
+            fill: currentColor;
+            margin-top: -0.25em;
+            /* 4px */
+            margin-right: 0.25em;
+            /* 4px */
+        }
+
+        .inputfile-2 + label {
+            color: #ffffff;
+            border: 2px solid currentColor;
+        }
+
+        .inputfile-2:focus + label,
+        .inputfile-2.has-focus + label,
+        .inputfile-2 + label:hover {
+            color: #ff0000;
+        }
+    </style>
+
 </head>
 <body>
+
+<div style="position:absolute; top: 10px; left: 10px; z-index: 1000">
+    <input id="inputfile" type="file" accept="image/gif, image/jpeg, image/png" onchange="readURL(this);" class="inputfile inputfile-2"/>
+    <label for="inputfile"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/></svg> <span>选择图片&hellip;</span></label>
+</div>
+
+
 <a-scene>
-    <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-    <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-    <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-    <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-    <a-sky color="#ECECEC"></a-sky>
+    <a-sky id="vrImage" src="puydesancy.jpg" rotation="0 -130 0"></a-sky>
+
+    <a-text font="kelsonsans" value="One Choice Design" width="6" position="-2.5 0.25 -1.5"
+            rotation="0 15 0"></a-text>
 </a-scene>
+
 </body>
 </html>
