--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 
 
 <a-scene>
-    <a-sky id="vrImage" src="puydesancy.jpg" rotation="0 -130 0"></a-sky>
+    <a-sky id="vrImage" src="red.png" rotation="0 0 0"></a-sky>
 
-    <a-text font="kelsonsans" value="One Choice Design" width="6" position="-2.5 0.25 -1.5"
-            rotation="0 15 0"></a-text>
+    <a-text font="kelsonsans" value="One Choice Design" width="10" position="0 0 -5"
+            rotation="0 0 0"></a-text>
 </a-scene>
 
 </body>
