--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
             if (input.files && input.files[0]) {
                 var reader = new FileReader();
 
-                reader.onload = function (e) {
-                    $('#vrImage')
-                            .attr('src', e.target.result);
+//                reader.onload = function (e) {
+//                    $('#vrImage').attr('src', e.target.result);
+//                };
+
+                reader.onloadend = function (e) {
+                    console.log(e.target.result);
+                    $('#vrImage').attr('src', e.target.result);
                 };
 
                 reader.readAsDataURL(input.files[0]);
