--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         .inputfile-2:focus + label,
         .inputfile-2.has-focus + label,
         .inputfile-2 + label:hover {
-            color: #ff0000;
+            color: #ffffff;
         }
     </style>
 
