--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
                 document.querySelector('#vrImage').setAttribute('src', pictureObjectURL);
             }
         }
+
+        window.onresize = function(){
+            var orientation = window.innerWidth > window.innerHeight ? "Landscape" : "Portrait";
+
+            if(orientation== "Landscape") {
+                document.querySelector('#imgPicker').style.visibility = 'hidden';
+            }
+            else {
+                document.querySelector('#imgPicker').style.visibility = 'visible';
+            }
+        }
     </script>
 
     <style>
@@ -92,7 +103,7 @@
 </head>
 <body>
 
-<div style="position:absolute; top: 10px; left: 10px; z-index: 1000">
+<div id="imgPicker" style="position:absolute; top: 10px; left: 10px; z-index: 1000">
     <input id="inputfile" type="file" accept="image/gif, image/jpeg, image/png" onchange="readURL(this);" class="inputfile inputfile-2"/>
     <label for="inputfile"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"/></svg> <span>选择图片&hellip;</span></label>
 </div>
@@ -101,7 +112,7 @@
 <a-scene>
     <a-sky id="vrImage" src="red.png" rotation="0 0 0"></a-sky>
 
-    <a-text font="kelsonsans" value="One Choice Design" width="10" position="0 0 -5"
+    <a-text font="kelsonsans" value="One Choice Design :p" width="10" position="0 0 -5"
             rotation="0 0 0"></a-text>
 </a-scene>
 
